--- a/baithuchanh1808.html
+++ b/baithuchanh1808.html
@@ -4,8 +4,7 @@
 
 <h1>chu The Toan</h1>
 
-<p><a href="https://www.24h.com.vn/">Visit bao24h</a></p>
-
+<img  src="C:\Users\ADMIN\Downloads\nobita.jpg">
 </body>
 </html>
 
