--- a/baithuchanh1808.html
+++ b/baithuchanh1808.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <title>Chu Thế Toàn 2121051176 </title>
+  <link rel="jpg" type="image/jpg" href="C:\Users\ADMIN\Downloads\nobita.jpg">
+</head>
 <body>
 
-<h1>chu The Toan</h1>
+<h1>Chu Thế Toàn 2121051176</h1>
+<p>bức ảnh tôi thích</p>
 
-<img  src="C:\Users\ADMIN\Downloads\nobita.jpg">
 </body>
 </html>
-
