--- a/baithuchanh2208.html
+++ b/baithuchanh2208.html
@@ -1,11 +1,17 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Chu Thế Toàn 2121051176</title>
-</head>
-<body>
-Tháng vừa qua của tôi là 1 tháng tồi tệ nhất
-
-
-</body>
-</html>
+<table>
+    <tr>
+      <th>Họ và Dệm</th>
+      <th>Tên</th>
+      <th>Năm sinh</th>
+    </tr>
+    <tr>
+      <td>Chu Thế </td>
+      <td>Toàn </td>
+      <td>2003</td>
+    </tr>
+    <tr>
+      <td>Nguyễn</td>
+      <td>Anh</td>
+      <td>2002</td>
+    </tr>
+  </table>
