--- a/baithuchanh2208.html
+++ b/baithuchanh2208.html
@@ -1,17 +1,41 @@
-<table>
-    <tr>
-      <th>Họ và Dệm</th>
-      <th>Tên</th>
-      <th>Năm sinh</th>
-    </tr>
-    <tr>
-      <td>Chu Thế </td>
-      <td>Toàn </td>
-      <td>2003</td>
-    </tr>
-    <tr>
-      <td>Nguyễn</td>
-      <td>Anh</td>
-      <td>2002</td>
-    </tr>
-  </table>
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+table, th, td {
+  border: 1px solid red ;
+}
+</style>
+</head>
+<body>
+
+<h2>thông tin cơ bản </h2>
+
+<p>Những thông tin sinh viên lớp 66k1.</p>
+
+<table style="width:100%">
+  <tr>
+    <th>Họ và đệm </th>
+    <th>Tên</th> 
+    <th>Tuổi </th>
+  </tr>
+  <tr>
+    <td>Chu Thế </td>
+    <td>Toàn</td>
+    <td>20</td>
+  </tr>
+  <tr>
+    <td>Dặng Thị Ngọc </td>
+    <td>Ánh </td>
+    <td>20</td>
+  </tr>
+  <tr>
+    <td>Hà Mạnh  </td>
+    <td>Kiên</td>
+    <td>20</td>
+  </tr>
+</table>
+
+</body>
+</html>
+
