--- a/baithuchanh2208.html
+++ b/baithuchanh2208.html
@@ -1,41 +1,17 @@
 <!DOCTYPE html>
 <html>
-<head>
-<style>
-table, th, td {
-  border: 1px solid red ;
-}
-</style>
-</head>
 <body>
 
-<h2>thông tin cơ bản </h2>
+<h2>Những đò uống hot</h2>
 
-<p>Những thông tin sinh viên lớp 66k1.</p>
-
-<table style="width:100%">
-  <tr>
-    <th>Họ và đệm </th>
-    <th>Tên</th> 
-    <th>Tuổi </th>
-  </tr>
-  <tr>
-    <td>Chu Thế </td>
-    <td>Toàn</td>
-    <td>20</td>
-  </tr>
-  <tr>
-    <td>Dặng Thị Ngọc </td>
-    <td>Ánh </td>
-    <td>20</td>
-  </tr>
-  <tr>
-    <td>Hà Mạnh  </td>
-    <td>Kiên</td>
-    <td>20</td>
-  </tr>
-</table>
+<dl>
+  <dt>Coffee</dt>
+  <dt>coffee muối trứng </dt>
+  <dd>- black hot drink</dd>
+  <dt>Milk</dt>
+  <dt>trà sữa</dt>
+  <dd>- white cold drink</dd>
+</dl>
 
 </body>
 </html>
-
