HTML Block and Inline Elements

--- a/baithuchanh2208.html
+++ b/baithuchanh2208.html
@@ -2,16 +2,11 @@
 <html>
 <body>
 
-<h2>Những đò uống hot</h2>
+<p style="border: 2px solid red ">Chu Thế Toàn </p>
+<div style="border: 2px solid blue">Câu nói hay </div>
 
-<dl>
-  <dt>Coffee</dt>
-  <dt>coffee muối trứng </dt>
-  <dd>- black hot drink</dd>
-  <dt>Milk</dt>
-  <dt>trà sữa</dt>
-  <dd>- white cold drink</dd>
-</dl>
+<p>Đừng bao giờ thay đổi mình vì người khác. Nếu họ không thể tiếp nhận một con người nhiều điểm xấu là bạn, thì cũng không xứng để có được một con người với nhiều điểm tốt là bạn.</p>
 
 </body>
 </html>
+
