--- a/baithuchanh2208.html
+++ b/baithuchanh2208.html
@@ -2,10 +2,9 @@
 <html>
 <body>
 
-<p style="border: 2px solid red ">Chu Thế Toàn </p>
-<div style="border: 2px solid blue">Câu nói hay </div>
+<p>Chu Thế Toàn <span style="border: 1px solid red ">2121051176</span> lớp DCCTCT66K1</p>
 
-<p>Đừng bao giờ thay đổi mình vì người khác. Nếu họ không thể tiếp nhận một con người nhiều điểm xấu là bạn, thì cũng không xứng để có được một con người với nhiều điểm tốt là bạn.</p>
+<p>Chu Thế Toàn 2121051176 </p>
 
 </body>
 </html>
