The <div> Element

--- a/baithuchanh2208.html
+++ b/baithuchanh2208.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
-<body>
-
-<p>Chu Thế Toàn <span style="border: 1px solid red ">2121051176</span> lớp DCCTCT66K1</p>
-
-<p>Chu Thế Toàn 2121051176 </p>
-
-</body>
+  <body>
+    <div style="background-color: brown;color:aqua;padding:20px;">
+    <h2>Chu Thế Toàn</h2>
+   CHu Thế Toàn2121051176
+  </div>
+  </body>
 </html>
 
