The <span> Element

--- a/baithuchanh2208.html
+++ b/baithuchanh2208.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <div style="background-color: brown;color:aqua;padding:20px;">
-    <h2>Chu Thế Toàn</h2>
-   CHu Thế Toàn2121051176
-  </div>
+    <h1>Chu Thế Toàn  </h1>
+    <p> Tôi có 1 cái bút <span style="color:blue;font-weight:bold;">xanh</span> và 1 cái bút <span  style="color:red;font-weight:bold;">đỏ</span>";</p>
   </body>
 </html>
 
