HTML class Attribute

--- a/baithuchanh2208.html
+++ b/baithuchanh2208.html
@@ -1,8 +1,33 @@
 <!DOCTYPE html>
 <html>
-  <body>
-    <h1>Chu Thế Toàn  </h1>
-    <p> Tôi có 1 cái bút <span style="color:blue;font-weight:bold;">xanh</span> và 1 cái bút <span  style="color:red;font-weight:bold;">đỏ</span>";</p>
-  </body>
+<head>
+<style>
+.sinhvien {
+  background-color: tomato;
+  color: white;
+  border: 2px solid black;
+  margin: 20px;
+  padding: 20px;
+}
+</style>
+</head>
+<body>
+
+<div class="sinhvien">
+<h2>Chu THế Toàn 2121051176</h2>
+<p>Quê Ba Vì Hà Nội.</p>
+</div> 
+
+<div class="sinhvien">
+<h2>Hà Mạnh Kiên</h2>
+<p>Quê Hiệp Hòa Bắc Giang</p>
+</div>
+
+<div class="sinhvien">
+<h2>NgTA</h2>
+<p>Quê Cầu Giấy Hà Nội </p>
+</div>
+
+</body>
 </html>
 
