HTML id Attribute

--- a/baithuchanh2208.html
+++ b/baithuchanh2208.html
@@ -2,31 +2,20 @@
 <html>
 <head>
 <style>
-.sinhvien {
-  background-color: tomato;
-  color: white;
-  border: 2px solid black;
-  margin: 20px;
-  padding: 20px;
-}
+#Toàn  {
+  background-color: lightyellow;
+  color: red ;
+  padding: 30px;
+  text-align: center;
+} 
 </style>
 </head>
 <body>
 
-<div class="sinhvien">
-<h2>Chu THế Toàn 2121051176</h2>
-<p>Quê Ba Vì Hà Nội.</p>
-</div> 
+<h2>LÀ 1 sinh viên trường HUMG</h2>
+<p>mang mã sinh vien là 2121051176:</p>
 
-<div class="sinhvien">
-<h2>Hà Mạnh Kiên</h2>
-<p>Quê Hiệp Hòa Bắc Giang</p>
-</div>
-
-<div class="sinhvien">
-<h2>NgTA</h2>
-<p>Quê Cầu Giấy Hà Nội </p>
-</div>
+<h1 id="Toàn">Toàn</h1>
 
 </body>
 </html>
