--- a/baithuchanh2208.html
+++ b/baithuchanh2208.html
@@ -1,21 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
-<style>
-#Toàn  {
-  background-color: lightyellow;
-  color: red ;
-  padding: 30px;
-  text-align: center;
-} 
-</style>
-</head>
 <body>
 
-<h2>LÀ 1 sinh viên trường HUMG</h2>
-<p>mang mã sinh vien là 2121051176:</p>
+<h2>Chu Thế Toan2121051176</h2>
+<p>Một ngày tồi tệ </p>
 
-<h1 id="Toàn">Toàn</h1>
+<iframe src="C:\Users\ADMIN\Downloads\nobita.jpg" height="2000" width="3000" title="ảnh"></iframe>
 
 </body>
 </html>
