The HTML <script> Tag

--- a/baithuchanh2208.html
+++ b/baithuchanh2208.html
@@ -2,10 +2,13 @@
 <html>
 <body>
 
-<h2>Chu Thế Toan2121051176</h2>
-<p>Một ngày tồi tệ </p>
+<h2>Chu Thế Toàn</h2>
 
-<iframe src="C:\Users\ADMIN\Downloads\nobita.jpg" height="2000" width="3000" title="ảnh"></iframe>
+<p id="CTT"></p>
+
+<script>
+document.getElementById("CTT").innerHTML = "Xin Chào Tôi Tên Là Chu Thế Toàn";
+</script> 
 
 </body>
 </html>
