A Taste of JavaScript

--- a/baithuchanh2208.html
+++ b/baithuchanh2208.html
@@ -2,13 +2,15 @@
 <html>
 <body>
 
-<h2>Chu Thế Toàn</h2>
+<button type="button" onclick="myFunction()">CTT</button>
 
-<p id="CTT"></p>
+<p id="demo">Nội dung </p>
 
 <script>
-document.getElementById("CTT").innerHTML = "Xin Chào Tôi Tên Là Chu Thế Toàn";
-</script> 
+function myFunction() { 
+  document.getElementById("demo").innerHTML = "tôi tên toàn";
+}
+</script>
 
 </body>
 </html>
