--- a/baithuchanh2208.html
+++ b/baithuchanh2208.html
@@ -2,15 +2,18 @@
 <html>
 <body>
 
-<button type="button" onclick="myFunction()">CTT</button>
 
-<p id="demo">Nội dung </p>
+<p id="demo">Chu Thế Taonf 2121051176.</p>
 
 <script>
-function myFunction() { 
-  document.getElementById("demo").innerHTML = "tôi tên toàn";
+function myFunction() {
+  document.getElementById("demo").style.fontSize = "50px"; 
+  document.getElementById("demo").style.color = "yellow";
+  document.getElementById("demo").style.backgroundColor = "blue";        
 }
 </script>
+
+<button type="button" onclick="myFunction()">CTT</button>
 
 </body>
 </html>
