--- a/baithuchanh2208.html
+++ b/baithuchanh2208.html
@@ -2,18 +2,8 @@
 <html>
 <body>
 
-
-<p id="demo">Chu Thế Taonf 2121051176.</p>
-
-<script>
-function myFunction() {
-  document.getElementById("demo").style.fontSize = "50px"; 
-  document.getElementById("demo").style.color = "yellow";
-  document.getElementById("demo").style.backgroundColor = "blue";        
-}
-</script>
-
-<button type="button" onclick="myFunction()">CTT</button>
+<h2>Chu Thế Toàn</h2>
+<img src="C:\Users\ADMIN\Downloads\nobita.jpg" alt="ảnh" style="width:300px">
 
 </body>
 </html>
