HTML - The Head Element

--- a/baithuchanh2208.html
+++ b/baithuchanh2208.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <title>Chu Thế Toàn 2121051176</title>
+</head>
 <body>
 
-<h2>Chu Thế Toàn</h2>
-<img src="C:\Users\ADMIN\Downloads\nobita.jpg" alt="ảnh" style="width:300px">
+<p>những ngày mệt mỏi</p>
+<p>thì chúng ta sẽ làm j </p>
 
 </body>
 </html>
