--- a/baithuchanh2208.html
+++ b/baithuchanh2208.html
@@ -1,12 +1,99 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Chu Thế Toàn 2121051176</title>
+<title>CHu Thế Toàn</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+header {
+  background-color: #666;
+  padding: 30px;
+  text-align: center;
+  font-size: 35px;
+  color: rgb(255, 255, 255);
+}
+
+
+nav {
+  float: left;
+  width: 30%;
+  height: 300px; 
+  background: #b71e1e;
+  padding: 20px;
+}
+
+
+nav ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+article {
+  float: left;
+  padding: 20px;
+  width: 70%;
+  background-color: #f1f1f1;
+  height: 300px; 
+}
+
+
+section::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+
+footer {
+  background-color: #777;
+  padding: 10px;
+  text-align: center;
+  color: yellow ;
+}
+
+
+@media (max-width: 600px) {
+  nav, article {
+    width: 100%;
+    height: auto;
+  }
+}
+</style>
 </head>
 <body>
 
-<p>những ngày mệt mỏi</p>
-<p>thì chúng ta sẽ làm j </p>
+<h2>Chu Thế Toàn </h2>
+
+<header>
+  <h2>Tên sinh viên</h2>
+</header>
+
+<section>
+  <nav>
+    <ul>
+      <li><a href="#">Toàn</a></li>
+      <li><a href="#">Kiên</a></li>
+      <li><a href="#">hải</a></li>
+    </ul>
+  </nav>
+  
+  <article>
+    <h1>CHu Thế Toàn</h1>
+    <p>mã sinh viên 2121051176</p>
+  </article>
+</section>
+
+<footer>
+  <p>1</p>
+</footer>
 
 </body>
 </html>
