--- a/baithuchanh2208.html
+++ b/baithuchanh2208.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
+<h1>CHu Thế Toàn</h1>
 <body>
-
-<h2>Chu Thế Toàn</h2>
-
-
-<img src="C:\Users\ADMIN\Downloads\nobita.jpg" style="width:100%;">
+<code> X=6;
+   Y=8;
+  Z=X+Y;
+</code>
 
 </body>
 </html>
