HTML <kbd> For Keyboard Input

--- a/baithuchanh2208.html
+++ b/baithuchanh2208.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html>
-<h1>CHu Thế Toàn</h1>
 <body>
-<code> X=6;
-   Y=8;
-  Z=X+Y;
-</code>
+  <p> Chu Thế Toàn <kpd>Chu Thế Toàn 2121051176</kpd></p>
+</body>
 
 </body>
 </html>
