--- a/baithuchanh2208.html
+++ b/baithuchanh2208.html
@@ -1,7 +1,24 @@
 <!DOCTYPE html>
 <html>
 <body>
-  <p> Chu Thế Toàn <kpd>Chu Thế Toàn 2121051176</kpd></p>
+  
+  <p><a href="https://humg.edu.vn/Pages/home.aspx">Khoa CNTT HUMG</a></p>
+
+  <h2 text align =center > department</h2>
+    <table>
+      <tr>
+        <th><b>STT</b></th>
+        <th><b>department</b></th>
+        <th><b>Address</b></th>
+        <th><b>phone</b></th>
+        <th><b>Email</b></th>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td><a href="https://humg.edu.vn/gioi-thieu/co-cau-to-chuc/cac-khoa/Pages/khoa-trac-dia-ban-do-va-quan-ly-dat-dai.aspx">Tin học trắc địa</a></td>
+      </tr>
+
+ 
 </body>
 
 </body>
