--- a/bài3.html
+++ b/bài3.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="vi">
 <body>
-<from>
-  <label for="fname">User Name:</label><br>
-  <input type="text" id="fname" name="fname" value="input username"><br>
-  <label for="lname">Password:</label><br>
-  <input type="text" id="lname" name="lname" value="input password">
-</from>
+    <h1><b> User Name</b> <input type="text" placeholder="input user name:"></h1>
+    <h1><b> Password</b> <input type="password" placeholder="input password:"></h1>
+    <h1> <label for="checkbox">Remember me: </label> <input type="checkbox" id="checkbox"></h1>
+    <button> LOG IN</button>
 </body>
+
 </html>
