--- a/CSS/W3css.html
+++ b/CSS/W3css.html
@@ -3,21 +3,20 @@
 <title>W3.CSS</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<body>
+<body class="w3-container w3-auto">
 
-<div class="w3-container w3-teal">
-  <h1>chu Thế Toàn</h1>
+<h2>Chu Thế Toàn</h2>
+<p>CHu Thế Toàn 2121051176</p>
+
+<div class="w3-panel w3-pale-yellow w3-border">
+  <h3>CHu Thế Toàn 2121051176</h3>
+  <p>CHu Thế Toàn 2121051176</p>
 </div>
 
-<img src="C:\Users\ADMIN\Downloads\nobita.jpg" alt="nobita" style="width:100%">
-
-<div class="w3-container">
-  <p>Một bức tranh của nobita buồn</p>
-</div>
-
-<div class="w3-container w3-teal">
-  <p>BỨc tranh nói lên nỗi buồn </p>
+<div class="w3-panel w3-yellow w3-border">
+  <h3>CHu Thế Toàn 2121051176</h3>
+  <p>CHu Thế Toàn 2121051176</p>
 </div>
 
 </body>
-</html> 
+</html>
