--- a/CSS/W3css.html
+++ b/CSS/W3css.html
@@ -3,19 +3,17 @@
 <title>W3.CSS</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<body class="w3-container w3-auto">
+<body>
 
-<h2>Chu Thế Toàn</h2>
-<p>CHu Thế Toàn 2121051176</p>
+<div class="w3-container">
+  <h2>Chu Thế Toàn</h2>
 
-<div class="w3-panel w3-pale-yellow w3-border">
-  <h3>CHu Thế Toàn 2121051176</h3>
-  <p>CHu Thế Toàn 2121051176</p>
-</div>
-
-<div class="w3-panel w3-yellow w3-border">
-  <h3>CHu Thế Toàn 2121051176</h3>
-  <p>CHu Thế Toàn 2121051176</p>
+  <div class="w3-card-4" style="width:50%">
+    <img src="C:\Users\ADMIN\Downloads\nobita.jpg" alt="Alps" style="width:100%">
+    <div class="w3-container w3-center">
+      <p>Nobita</p>
+    </div>
+  </div>
 </div>
 
 </body>
