Panels as Cards

--- a/CSS/W3css.html
+++ b/CSS/W3css.html
@@ -5,14 +5,11 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body>
 
-<div class="w3-container">
 
-  <ul class="w3-ul w3-border">
-    <li><h2>Họ và Tên</h2></li>
-    <li>CHu Thế Toàn</li>
-    <li> Nguyễn Đắc Tiến</li>
-    <li>Hoàng NGuyên Vũ</li>
-  </ul>
+  
+  <div class="w3-panel w3-red w3-card-6">
+    <p>Chu Thế Toàn</p>
+  </div>
 </div>
 
 </body>
