--- a/CSS/W3css.html
+++ b/CSS/W3css.html
@@ -6,10 +6,12 @@
 <body>
 
 
+
+<div class="w3-panel w3-red w3-display-container">
+  <span onclick="this.parentElement.style.display='none'"
+  class="w3-button w3-red w3-large w3-display-topright">x</span>
+  <p>Không được nhấn vào </p>
   
-  <div class="w3-panel w3-red w3-card-6">
-    <p>Chu Thế Toàn</p>
-  </div>
 </div>
 
 </body>
