--- a/CSS/W3css.html
+++ b/CSS/W3css.html
@@ -5,14 +5,16 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body>
 
+<button class="w3-button w3-red" onclick="document.getElementById('id01').style.display='block'">Thông Tin CƠ bản</button> 
 
-
-<div class="w3-panel w3-red w3-display-container">
+<div id="id01" class="w3-panel w3-green w3-display-container" style="display:none">
   <span onclick="this.parentElement.style.display='none'"
-  class="w3-button w3-red w3-large w3-display-topright">x</span>
-  <p>Không được nhấn vào </p>
+  class="w3-button w3-blue w3-display-topright">x</span>
+  <p><a href="https://www.facebook.com/toan.chuthe.1?mibextid=nW3QTL">Facebook</a></p>
+  <p> Chu Thế Toàn</p>
+  <p>0983080347</p>
   
 </div>
 
 </body>
-</html>
+</html> 
