W3.CSS Border Classes

--- a/CSS/W3css.html
+++ b/CSS/W3css.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html>
-<title>W3.CSS</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<body>
+    <litle>W3.CSS</litle>
+    <meta name="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <body>
+        <div class="w3-panel w3-border">
+            <h2>Chu Thế Toàn</h2>
+        </div>
+        <div class="w3-panel w3-border-left">
+            <p>CHu Thế Toàn </p>
+        </div>
+        <div class="w3-panel w3-border-right">
+            <P><a href="https://www.facebook.com/toan.chuthe.1?mibextid=nW3QTL">Facebook</a></P>
+        </div>
+        <div class="w3-panel w3-border-top w3-border-top w3-border-bottom">
+            <P>Chu Thế Toàn</P>
+        </div>
 
-<button class="w3-button w3-red" onclick="document.getElementById('id01').style.display='block'">Thông Tin CƠ bản</button> 
-
-<div id="id01" class="w3-panel w3-green w3-display-container" style="display:none">
-  <span onclick="this.parentElement.style.display='none'"
-  class="w3-button w3-blue w3-display-topright">x</span>
-  <p><a href="https://www.facebook.com/toan.chuthe.1?mibextid=nW3QTL">Facebook</a></p>
-  <p> Chu Thế Toàn</p>
-  <p>0983080347</p>
-  
-</div>
-
-</body>
-</html> 
+    </body>
+</html>
