--- a/CSS/W3css.html
+++ b/CSS/W3css.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html>
-    <litle>W3.CSS</litle>
-    <meta name="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <body>
-        <div class="w3-panel w3-border">
-            <h2>Chu Thế Toàn</h2>
-        </div>
-        <div class="w3-panel w3-border-left">
-            <p>CHu Thế Toàn </p>
-        </div>
-        <div class="w3-panel w3-border-right">
-            <P><a href="https://www.facebook.com/toan.chuthe.1?mibextid=nW3QTL">Facebook</a></P>
-        </div>
-        <div class="w3-panel w3-border-top w3-border-top w3-border-bottom">
-            <P>Chu Thế Toàn</P>
-        </div>
+<title>W3.CSS</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<body>
 
-    </body>
+<div class="w3-container">
+  <h2>Card Example</h2>
+
+  <div class="w3-card-4" style="width:70%">
+    <header class="w3-container w3-light-grey">
+      <h3>Chu Thế Toàn</h3>
+    </header>
+    <div class="w3-container">
+      <p>Có 1 người add </p>
+      <hr>
+      <img src="C:\Users\ADMIN\Downloads\nobita.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px">
+      <p>Là Một sinh viên trường HUMG</p><br>
+    </div>
+    <button class="w3-button w3-block w3-dark-grey">+ Connect</button>
+  </div>
+</div>
+
+</body>
 </html>
