--- a/CSS/W3css.html
+++ b/CSS/W3css.html
@@ -6,21 +6,13 @@
 <body>
 
 <div class="w3-container">
-  <h2>Card Example</h2>
-
-  <div class="w3-card-4" style="width:70%">
-    <header class="w3-container w3-light-grey">
-      <h3>Chu Thế Toàn</h3>
-    </header>
-    <div class="w3-container">
-      <p>Có 1 người add </p>
-      <hr>
-      <img src="C:\Users\ADMIN\Downloads\nobita.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px">
-      <p>Là Một sinh viên trường HUMG</p><br>
-    </div>
-    <button class="w3-button w3-block w3-dark-grey">+ Connect</button>
-  </div>
+  <h1>Chu Thế Toàn</h1>
+  <h2>Mã sinh viên 2121051176</h2>
+  <h3>Quê Ba Vì Hà Nội</h3>
+  <h4><a href="https://www.facebook.com/toan.chuthe.1?mibextid=nW3QTL">Facebook</a></h4>
+  <h5>0983080347</h5>
+  <h6>Sau này chúng ta có tất cả những ko có chúng ta</h6>
 </div>
 
 </body>
-</html>
+</html> 
