--- a/CSS/W3css.html
+++ b/CSS/W3css.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
-<html>
-<title>W3.CSS</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Chu Thế Toàn</title>
+    <link href="https://www.w3schools.com/w3css/4/w3.css" rel="stylesheet">
+    <style>
+        body,
+        p,
+        h1,
+        h2 {
+            font-family: cursive;
+        }
+    </style>
+</head>
+
 <body>
-
-<div class="w3-container">
-  <h1>Chu Thế Toàn</h1>
-  <h2>Mã sinh viên 2121051176</h2>
-  <h3>Quê Ba Vì Hà Nội</h3>
-  <h4><a href="https://www.facebook.com/toan.chuthe.1?mibextid=nW3QTL">Facebook</a></h4>
-  <h5>0983080347</h5>
-  <h6>Sau này chúng ta có tất cả những ko có chúng ta</h6>
-</div>
-
+    <div class="w3-container">
+        <h1> Chu Thế Toàn</h1>
+        <p> Cửa sổ nhìn ra cánh đồng bao la với những cánh chim bay rập rìu vào những buổi chiều hè hòa vào đó là những tiếng sáo diều vi vu nghĩ tới đó mà khiến ta xao xuyến bôi hồi về khoảng thời gian tuổi thơ đầy sự ngây dại</p>
+    </div>
 </body>
-</html> 
+
+</html>
