--- a/CSS/W3css.html
+++ b/CSS/W3css.html
@@ -4,22 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chu Thế Toàn</title>
+    <title>CHu Thế Toàn</title>
     <link href="https://www.w3schools.com/w3css/4/w3.css" rel="stylesheet">
     <style>
         body,
         p,
         h1,
         h2 {
-            font-family: cursive;
+            font-family: Arial, Helvetica, sans-serif;
         }
     </style>
 </head>
 
 <body>
     <div class="w3-container">
-        <h1> Chu Thế Toàn</h1>
+        <h1> Chu Thế Toàn
+        </h1>
         <p> Cửa sổ nhìn ra cánh đồng bao la với những cánh chim bay rập rìu vào những buổi chiều hè hòa vào đó là những tiếng sáo diều vi vu nghĩ tới đó mà khiến ta xao xuyến bôi hồi về khoảng thời gian tuổi thơ đầy sự ngây dại</p>
+        <p class="w3-large">
+            what
+        </p>
     </div>
 </body>
 
