--- a/CSS/W3css.html
+++ b/CSS/W3css.html
@@ -4,26 +4,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CHu Thế Toàn</title>
+    <title>Chu Thế Toàn</title>
     <link href="https://www.w3schools.com/w3css/4/w3.css" rel="stylesheet">
-    <style>
-        body,
-        p,
-        h1,
-        h2 {
-            font-family: Arial, Helvetica, sans-serif;
-        }
-    </style>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Allerta+Stencil">
+
 </head>
 
 <body>
     <div class="w3-container">
-        <h1> Chu Thế Toàn
+        <h2> CHu Thế Toàn</h2>
+    </div>
+    <div class="w3-panel w3-pink">
+        <h1 class="w3-opacity">
+            <b>Chu Thế Toàn có opacity và bold</b>
         </h1>
-        <p> Cửa sổ nhìn ra cánh đồng bao la với những cánh chim bay rập rìu vào những buổi chiều hè hòa vào đó là những tiếng sáo diều vi vu nghĩ tới đó mà khiến ta xao xuyến bôi hồi về khoảng thời gian tuổi thơ đầy sự ngây dại</p>
-        <p class="w3-large">
-            what
-        </p>
+    </div>
+    <div class="w3-panel w3-amber">
+        <h1 class="w3-text-yellow" style="text-shadow: 1px 1px 0 #444;">
+            <b> yellow + shadow +bold</b>
+        </h1>
+    </div>
+    <div class="w3-panel w3- w3-blue">
+        <h1 class="w3-text-orange" style="text-shadow: 1px 1px 0 #444;">
+            <p>CHu Thế Toàn orange +shadow+bold</p>
+        </h1>
     </div>
 </body>
 
