--- a/CSS/W3css.html
+++ b/CSS/W3css.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chu Thế Toàn</title>
+    <title>CHu thế toàn</title>
     <link href="https://www.w3schools.com/w3css/4/w3.css" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Allerta+Stencil">
 
@@ -12,22 +12,15 @@
 
 <body>
     <div class="w3-container">
-        <h2> CHu Thế Toàn</h2>
-    </div>
-    <div class="w3-panel w3-pink">
-        <h1 class="w3-opacity">
-            <b>Chu Thế Toàn có opacity và bold</b>
-        </h1>
-    </div>
-    <div class="w3-panel w3-amber">
-        <h1 class="w3-text-yellow" style="text-shadow: 1px 1px 0 #444;">
-            <b> yellow + shadow +bold</b>
-        </h1>
-    </div>
-    <div class="w3-panel w3- w3-blue">
-        <h1 class="w3-text-orange" style="text-shadow: 1px 1px 0 #444;">
-            <p>CHu Thế Toàn orange +shadow+bold</p>
-        </h1>
+        <h2>  chu thé toàn</h2>
+        <div class="w3-padding-32 w3-green w3-circle" style="width: 50%;height: 50%;">
+            <div class="w3-padding-32 w3-red w3-circle w3-center" style="width:55% ;">
+                <p class="w3-xlarge">
+                    toàn<br> chu thế toàn
+                </p>
+            </div>
+
+        </div>
     </div>
 </body>
 
