--- a/CSS/W3css.html
+++ b/CSS/W3css.html
@@ -4,22 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CHu thế toàn</title>
+    <title>chu thế toàn</title>
     <link href="https://www.w3schools.com/w3css/4/w3.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Allerta+Stencil">
+
 
 </head>
 
 <body>
     <div class="w3-container">
-        <h2>  chu thé toàn</h2>
-        <div class="w3-padding-32 w3-green w3-circle" style="width: 50%;height: 50%;">
-            <div class="w3-padding-32 w3-red w3-circle w3-center" style="width:55% ;">
-                <p class="w3-xlarge">
-                    toàn<br> chu thế toàn
-                </p>
-            </div>
-
+        <div class="w3-panel w3-padding-small w3-blue">
+            <h4> chu thế toàn</h4>
+            <p> 2121051176</p>
+        </div>
+        <div class="w3-padding w3-blue">
+            <h4>chu thế toàn</h4>
+            <p> hà nội</p>
+        </div>
+        <div class="w3-panel w3-padding-large w3-blue">
+            <h4> chu thế toàn</h4>
+            <p> chu thế toàn </p>
         </div>
     </div>
 </body>
