--- a/CSS/W3css.html
+++ b/CSS/W3css.html
@@ -4,27 +4,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>chu thế toàn</title>
+    <title>CHu Thế toàn</title>
     <link href="https://www.w3schools.com/w3css/4/w3.css" rel="stylesheet">
 
-
 </head>
+<div class="w3-container">
+    <h1> Toàn </h1>
+    <div class="w3-container w3-blue">
+        <h1> blue</h1>
+    </div>
+    <div class="w3-container w3-green">
+        <h1>  green</h1>
+    </div>
+    <div class="w3-container w3-section w3-blue">
+        <h1>  blue</h1>
+    </div>
+    <div class="w3-container w3-section w3-green">
+        <h1>  greenn</h1>
+    </div>
+
+</div>
 
 <body>
-    <div class="w3-container">
-        <div class="w3-panel w3-padding-small w3-blue">
-            <h4> chu thế toàn</h4>
-            <p> 2121051176</p>
-        </div>
-        <div class="w3-padding w3-blue">
-            <h4>chu thế toàn</h4>
-            <p> hà nội</p>
-        </div>
-        <div class="w3-panel w3-padding-large w3-blue">
-            <h4> chu thế toàn</h4>
-            <p> chu thế toàn </p>
-        </div>
-    </div>
+
 </body>
 
 </html>
