--- a/CSS/W3css.html
+++ b/CSS/W3css.html
@@ -4,12 +4,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
-<body>
+<body class="w3-container">
 
-    <div class="w3-container">
-        <div class="w3-panel w3-yellow w3-topbar w3-bottombar w3-border-amber">
-            <p>Chu Thế toàn</p>
-        </div>
+    <div class="w3-panel w3-center w3-leftbar w3-sand">
+        <p><i class="w3-serif w3-xlarge">
+<span style="font-size:150px;line-height:0.6em;opacity:0.2">✔</span>
+Hà nội <br>
+CHu Thế Toàn</i></p>
     </div>
 
 </body>
