--- a/CSS/W3css.html
+++ b/CSS/W3css.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html>
-<title>Chu thế toàn</title>
+<title>CHu Thế Toàn</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
-<body class="w3-container">
+<body class="w3-container w3-auto">
 
-    <div class="w3-panel w3-center w3-leftbar w3-sand">
-        <p><i class="w3-serif w3-xlarge">
-<span style="font-size:150px;line-height:0.6em;opacity:0.2">✔</span>
-Hà nội <br>
-CHu Thế Toàn</i></p>
+    <h2>thông tin</h2>
+    <p>Chu The Toan</p>
+
+    <div class="w3-panel w3-pale-blue w3-border">
+        <h3>Chu Thế Toàn</h3>
+        <p>Ba vì hà nội</p>
+    </div>
+
+    <div class="w3-panel w3-blue">
+        <h3>CHu Thế toàn</h3>
+        <p> học trường Đại HỌc mỏ địa chất</p>
     </div>
 
 </body>
