--- a/CSS/W3css.html
+++ b/CSS/W3css.html
@@ -1,22 +1,41 @@
 <!DOCTYPE html>
 <html>
-<title>CHu Thế Toàn</title>
+<title>Chu Thế toàn</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
-<body class="w3-container w3-auto">
+<body>
 
-    <h2>thông tin</h2>
-    <p>Chu The Toan</p>
+    <div class="w3-container">
+        <h2>bảng điểm </h2>
 
-    <div class="w3-panel w3-pale-blue w3-border">
-        <h3>Chu Thế Toàn</h3>
-        <p>Ba vì hà nội</p>
-    </div>
-
-    <div class="w3-panel w3-blue">
-        <h3>CHu Thế toàn</h3>
-        <p> học trường Đại HỌc mỏ địa chất</p>
+        <table class="w3-table-all ">
+            <tr class="w3-blue">
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Points</th>
+            </tr>
+            <tr>
+                <td>Toàn</td>
+                <td>Chu Thế  </td>
+                <td>50</td>
+            </tr>
+            <tr>
+                <td>kiên</td>
+                <td>hà</td>
+                <td>94</td>
+            </tr>
+            <tr>
+                <td>Hải</td>
+                <td>Quách</td>
+                <td>67</td>
+            </tr>
+            <tr>
+                <td>Sơn</td>
+                <td>Nguyễn</td>
+                <td>35</td>
+            </tr>
+        </table>
     </div>
 
 </body>
