--- a/CSS/W3css.html
+++ b/CSS/W3css.html
@@ -1,41 +1,18 @@
 <!DOCTYPE html>
 <html>
-<title>Chu Thế toàn</title>
+<title>Chu Thế Toàn</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
 <body>
-
     <div class="w3-container">
-        <h2>bảng điểm </h2>
-
-        <table class="w3-table-all ">
-            <tr class="w3-blue">
-                <th>First Name</th>
-                <th>Last Name</th>
-                <th>Points</th>
-            </tr>
-            <tr>
-                <td>Toàn</td>
-                <td>Chu Thế  </td>
-                <td>50</td>
-            </tr>
-            <tr>
-                <td>kiên</td>
-                <td>hà</td>
-                <td>94</td>
-            </tr>
-            <tr>
-                <td>Hải</td>
-                <td>Quách</td>
-                <td>67</td>
-            </tr>
-            <tr>
-                <td>Sơn</td>
-                <td>Nguyễn</td>
-                <td>35</td>
-            </tr>
-        </table>
+        <h2>đóng 1 phần tử lisy</h2>
+        <p>nhấn vào nút "x" để đóng:</p>
+        <ul class="w3-ul w3-card-4">
+            <li class="w3-display-container">Hà Mạnh KIÊn <span onclick="this.parentElement.style.display='none'" class="w3-button w3-transparent w3-display-right">&times;</span></li>
+            <li class="w3-display-container">2121051149 <span onclick="this.parentElement.style.display='none'" class="w3-button w3-transparent w3-display-right">&times;</span></li>
+            <li class="w3-display-container">Bắc Giang <span onclick="this.parentElement.style.display='none'" class="w3-button w3-transparent w3-display-right">&times;</span></li>
+        </ul>
     </div>
 
 </body>
