--- a/CSS/W3css.html
+++ b/CSS/W3css.html
@@ -9,9 +9,9 @@
         <h2>đóng 1 phần tử lisy</h2>
         <p>nhấn vào nút "x" để đóng:</p>
         <ul class="w3-ul w3-card-4">
-            <li class="w3-display-container">Hà Mạnh KIÊn <span onclick="this.parentElement.style.display='none'" class="w3-button w3-transparent w3-display-right">&times;</span></li>
-            <li class="w3-display-container">2121051149 <span onclick="this.parentElement.style.display='none'" class="w3-button w3-transparent w3-display-right">&times;</span></li>
-            <li class="w3-display-container">Bắc Giang <span onclick="this.parentElement.style.display='none'" class="w3-button w3-transparent w3-display-right">&times;</span></li>
+            <li class="w3-display-container">CHu Thế Toàn <span onclick="this.parentElement.style.display='none'" class="w3-button w3-transparent w3-display-right">&times;</span></li>
+            <li class="w3-display-container">2121051176 <span onclick="this.parentElement.style.display='none'" class="w3-button w3-transparent w3-display-right">&times;</span></li>
+            <li class="w3-display-container">Hà nội <span onclick="this.parentElement.style.display='none'" class="w3-button w3-transparent w3-display-right">&times;</span></li>
         </ul>
     </div>
 
