--- a/JS/baithuchanhjs.html
+++ b/JS/baithuchanhjs.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CHu THẾ Toàn</title>
+    <title>Chu Thế Toàn </title>
     <style>
         @keyframes blink {
             0% {
@@ -15,17 +15,9 @@
         }
     </style>
     <script>
-        alert("Hello Thầy Phạm Quang Hiển")
         function hello() {
             alert("Hello Thầy Phạm Quang Hiển")
+            document.querySelector('H1').innerHTML = 'Hello Thầy Phạm Quang Hiển'
         }
     </script>
 </head>
-
-<body>
-
-    <h1 style="animation: blink 1s linear infinite ;text-align: center;top:50%;left:50%;position: absolute;">CHu Thế Toàn</h1>
-    <button onclick="hello()" style="border-radius: 10px; background-color: blanchedalmond;margin-left: 20%;margin-top: 20% ;"> Nhấp vào đây để chào thầy nhé</button>
-</body>
-
-</html>
