--- a/JS/baithuchanhjs.html
+++ b/JS/baithuchanhjs.html
@@ -1,39 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chu Thế Toàn </title>
-    <style>
-        @keyframes blink {
-            0% {
-                color: burlywood;
-            }
-            100% {
-                color: transparent;
-            }
-        }
-    </style>
-    <script>
-        function hello() {
-            document.querySelector('H1').innerHTML = 'Hello Thầy Phạm Quang Hiển'
-        var count = 0;
-
-        function increaseCount() {
-            count++;
-            document.querySelector('#count').innerHTML = count;
-            if (count % 10 == 0) {
-                alert('Số lượt nhấp hiện tại là ' + count + '!');
-            }
-        }
-    </script>
-</head>
-
-<body>
-    <p id="count">a </p>
-    <h1 style="animation: blink 1s linear infinite ;text-align: center;top:50%;left:50%;position: absolute;">CHu Thế Toàn </h1>
-    <button onclick="hello()" style="border-radius: 10px; background-color: blanchedalmond;margin-left: 20%;margin-top: 20% ;"> Nhấp vào đây để chào thầy nhé</button>
-    <button onclick="increaseCount()" style="border-radius: 10px; background-color: blanchedalmond;margin-left: 20%;margin-top: 20% ;"> Nhấp vào đây để chào thầy nhé</button>
-</body>
-
+<html>
+    <head>
+        <script src="counter"></script>
+        <title>Chu Thế TOàn</title>
+    </head>
+        <body>
+            <h1 id="counter">0</h1>
+            <button>nhấn vào đây </button>
+        </body>
 </html>
