--- a/CSS/W3css.html
+++ b/CSS/W3css.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
-<title>Chu Thế TOàn </title>
+<title>Toàn</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body>
 
 <div class="w3-container">
-  <p>CHu Thế Toàn  <span class="w3-badge">9</span></p>
+  <p>Status: <span class="w3-tag">Done</span></p>
 </div>
 
 </body>
-</html>
+</html> 
