--- a/bài2.html
+++ b/bài2.html
@@ -55,6 +55,6 @@
         <li>HTTT</li>
     </ul>
     <h1> Trang web này của Pug </h1>
-    <img src="C:\Users\ADMIN\Downloads\nobita.jpg" alt="Trulli" width="500" height="100">
+    <img src="C:\Users\ADMIN\Downloads\nobita.jpg" alt="Trulli" width="500px" height="300px">
     </body>
     </html>
