--- a/CSS/W3css.html
+++ b/CSS/W3css.html
@@ -1,25 +1,17 @@
 <!DOCTYPE html>
 <html>
-<title>Chu Thế Toàn</title>
+<title>Toàn</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body>
 
-<div class="w3-container">
-  <h2>Toàn</h2>
-  <p class="w3-large">Try to resize the window!</p>
+<div class="w3-container w3-red">
+  <p>Chu Thế Toàn</p>
 </div>
 
-<div class="w3-row w3-border">
-  <div class="w3-container w3-half w3-red">
-    <h2>Toàn</h2>  
-    <p></p>
-    <p></p>
-  </div>
-  <div class="w3-container w3-half">
-    <h2>CHU Thế Toàn</h2>  
-  </div>
+<div class="w3-container w3-green">
+  <p>Hello W3.CSS Layout.</p>
 </div>
 
 </body>
-</html>       
+</html>
