--- a/CSS/W3css.html
+++ b/CSS/W3css.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html>
-<title>Toàn</title>
+<title>hu Thế Toàn</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body>
 
-<div class="w3-container w3-red">
-  <p>Chu Thế Toàn</p>
-</div>
-
-<div class="w3-container w3-green">
-  <p>Hello W3.CSS Layout.</p>
+<div class="w3-container w3-center w3-animate-top">
+  <h1>Toàn</h1>
+  <p> Tôi chỉ muốn yêu một người thật lâu… Rồi sau đó sẽ cùng nắm tay nhau đi hết cuối con đường dài của cuộc sốngTop 1500 + Những câu nói hay về tình yêu buồn, tan vỡ, hạnh phúc/p>
 </div>
 
 </body>
