--- a/CSS/W3css.html
+++ b/CSS/W3css.html
@@ -5,9 +5,9 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body>
 
-<div class="w3-container w3-center w3-animate-bottom">
+<div class="w3-container w3-center w3-animate-right">
   <h1>Animation is Fun!</h1>
-  <p>The w3-animate-bottom class slides in an element from the bottom.</p>
+  <p>The w3-animate-right class slides in an element from the right.</p>
 </div>
 
 </body>
