--- a/CSS/W3css.html
+++ b/CSS/W3css.html
@@ -5,12 +5,12 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body>
 
-<div class="w3-container w3-center w3-animate-opacity">
+<div class="w3-container w3-center w3-animate-zoom">
   <h1>Animation is Fun!</h1>
-  <p>The w3-animate-opacity class fades in an element (0 to 1 opacity in 0.8 seconds).</p>
+  <p>The w3-animate-zoom class zooms in an element (from 0% to 100% in size).</p>
   <img src="img_car.jpg" alt="Car" style="width:100%">
 </div>
 
 </body>
-</html> 
+</html>
 
