--- a/CSS/W3css.html
+++ b/CSS/W3css.html
@@ -5,12 +5,29 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body>
 
-<div class="w3-container w3-center w3-animate-zoom">
-  <h1>Animation is Fun!</h1>
-  <p>The w3-animate-zoom class zooms in an element (from 0% to 100% in size).</p>
-  <img src="img_car.jpg" alt="Car" style="width:100%">
+<div class="w3-container">
+  <h2>Opacity Effect</h2>
+  <p>The w3-opacity classes add a transparency effect to an element.</p>
+
+  <p>Normal:</p>
+  <img src="" style="width:300px">
+  <p>w3-opacity-min:</p>
+  <img src="img_snow_wide.jpg" class="w3-opacity-min" style="width:300px">
+  <p>w3-opacity:</p>
+  <img src="img_snow_wide.jpg" class="w3-opacity" style="width:300px">
+  <p>w3-opacity-max:</p>
+  <img src="img_snow_wide.jpg" class="w3-opacity-max" style="width:300px">
+
+  <div class="w3-panel w3-red w3-opacity">
+    <p>Red with opacity</p>
+  </div>
+  <div class="w3-panel w3-blue w3-opacity">
+    <p>Blue with opacity</p>
+  </div>
+  <div class="w3-panel w3-green w3-opacity">
+    <p>Green with opacity</p>
+  </div>
 </div>
 
 </body>
 </html>
-
