--- a/CSS/W3css.html
+++ b/CSS/W3css.html
@@ -6,26 +6,27 @@
 <body>
 
 <div class="w3-container">
-  <h2>Opacity Effect</h2>
-  <p>The w3-opacity classes add a transparency effect to an element.</p>
+  <h2>Grayscale Effect</h2>
+  <p>The w3-grayscale classes add a grayscale effect to an element.</p>
+  <p><strong>Note:</strong> The w3-grayscale classes are not supported in IE 11 and earlier versions.</p>
 
   <p>Normal:</p>
-  <img src="" style="width:300px">
-  <p>w3-opacity-min:</p>
-  <img src="img_snow_wide.jpg" class="w3-opacity-min" style="width:300px">
-  <p>w3-opacity:</p>
-  <img src="img_snow_wide.jpg" class="w3-opacity" style="width:300px">
-  <p>w3-opacity-max:</p>
-  <img src="img_snow_wide.jpg" class="w3-opacity-max" style="width:300px">
+  <img src="img_snow_wide.jpg" alt="Snow" style="width:300px">
+  <p>w3-grayscale-min:</p>
+  <img src="img_snow_wide.jpg" alt="Snow" class="w3-grayscale-min" style="width:300px">
+  <p>w3-grayscale:</p>
+  <img src="img_snow_wide.jpg" alt="Snow" class="w3-grayscale" style="width:300px">
+  <p>w3-grayscale-max (black and white):</p>
+  <img src="img_snow_wide.jpg" alt="Fjords" class="w3-grayscale-max" style="width:300px">
 
-  <div class="w3-panel w3-red w3-opacity">
-    <p>Red with opacity</p>
+  <div class="w3-panel w3-red w3-grayscale">
+    <p>Red with grayscale</p>
   </div>
-  <div class="w3-panel w3-blue w3-opacity">
-    <p>Blue with opacity</p>
+  <div class="w3-panel w3-blue w3-grayscale">
+    <p>Blue with grayscale</p>
   </div>
-  <div class="w3-panel w3-green w3-opacity">
-    <p>Green with opacity</p>
+  <div class="w3-panel w3-green w3-grayscale">
+    <p>Green with grayscale</p>
   </div>
 </div>
 
