--- a/CSS/W3css.html
+++ b/CSS/W3css.html
@@ -4,31 +4,18 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body>
-
 <div class="w3-container">
-  <h2>Grayscale Effect</h2>
-  <p>The w3-grayscale classes add a grayscale effect to an element.</p>
-  <p><strong>Note:</strong> The w3-grayscale classes are not supported in IE 11 and earlier versions.</p>
 
-  <p>Normal:</p>
-  <img src="img_snow_wide.jpg" alt="Snow" style="width:300px">
-  <p>w3-grayscale-min:</p>
-  <img src="img_snow_wide.jpg" alt="Snow" class="w3-grayscale-min" style="width:300px">
-  <p>w3-grayscale:</p>
-  <img src="img_snow_wide.jpg" alt="Snow" class="w3-grayscale" style="width:300px">
-  <p>w3-grayscale-max (black and white):</p>
-  <img src="img_snow_wide.jpg" alt="Fjords" class="w3-grayscale-max" style="width:300px">
+<h2>Horizontal Bar</h2>
 
-  <div class="w3-panel w3-red w3-grayscale">
-    <p>Red with grayscale</p>
-  </div>
-  <div class="w3-panel w3-blue w3-grayscale">
-    <p>Blue with grayscale</p>
-  </div>
-  <div class="w3-panel w3-green w3-grayscale">
-    <p>Green with grayscale</p>
-  </div>
+<p>An horizontal bar is a common web design element:</p>
+
+<div class="w3-bar w3-border w3-light-grey">
+  <div class="w3-bar-item">London</div>
+  <div class="w3-bar-item">Paris</div>
+  <div class="w3-bar-item">Tokyo</div>
 </div>
 
+</div>
 </body>
 </html>
