--- a/JS/baithuchanhjs.html
+++ b/JS/baithuchanhjs.html
@@ -1,21 +1,42 @@
 <!DOCTYPE html>
-<br>
+<html lang="en">
+
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        html {
+            background-color: bisque;
+        }
+    </style>
 </head>
-<br>
-    
-    <input type="number" id="a" placeholder="Nhập số a">
-    <br><input type="number" id="b" placeholder="Nhập số b"></br>
-    <br><button onclick="tinhTong()">Tính tổng</button></br>
-    <p id="result"></p>
+
+<body>
+    <form>
+        <div style="margin:0 auto;background-color: aquamarine;width:330px;height:230px;justify-content: center;border-radius: 10px;margin-top: 250px;">
+            <div style="margin-bottom: 20px;padding-top: 30px;text-align: center;">
+                <label style="padding-top:20px ;">Nhập số a:</label>
+                <input type="text" name="soa" id="a" required/><br>
+            </div>
+            <div style="margin-bottom: 20px;padding-top: 10px;text-align: center;">
+                <label>Nhập số b:</label>
+                <input type="text" name="sob" id="b" required/><br>
+            </div>
+            <p style="margin-left: 40px;">Kết quả là: <span></span></p>
+
+            <button type="button" style="background-color: aqua;margin-top: px;margin-left: 100px;border: none;width: 80px;height: 30px; " onclick="total()">Tổng</button>
+        </div>
+    </form>
 
     <script>
-        function tinhTong() {
-            var a = parseInt(document.getElementById("a").value);
-            var b = parseInt(document.getElementById("b").value);
-            var sum = a + b;
-            document.getElementById("result").innerHTML = "Tổng hai số là: " + sum;
+        function total() {
+            const a = parseInt(document.querySelector('#a').value);
+            const b = parseInt(document.querySelector('#b').value);
+            const tong = a + b;
+            document.querySelector('span').textContent = +tong;
         }
     </script>
 </body>
+
 </html>
