--- a/CSS/W3css.html
+++ b/CSS/W3css.html
@@ -3,38 +3,24 @@
 <title>Chu Thế Toàn</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<body>
+<body class="w3-container">
 
-<div class="w3-container">
-  <h3>Mobile First Fluid Grid</h3>
-  <p class="w3-large">Try to resize the window!</p>
-</div>
+<h2>Displaying Examples</h2>
+<p>The w3-panel class can be used to display examples:</p>
 
-<div class="w3-row">
-  <div class="w3-col m1 w3-center w3-grey">1</div>
-  <div class="w3-col m1 w3-center">2</div>
-  <div class="w3-col m1 w3-center w3-grey">3</div>
-  <div class="w3-col m1 w3-center">4</div>
-  <div class="w3-col m1 w3-center w3-grey">5</div>
-  <div class="w3-col m1 w3-center">6</div>
-  <div class="w3-col m1 w3-center w3-grey">7</div>
-  <div class="w3-col m1 w3-center">8</div>
-  <div class="w3-col m1 w3-center w3-grey">9</div>
-  <div class="w3-col m1 w3-center">10</div>
-  <div class="w3-col m1 w3-center w3-grey">11</div>
-  <div class="w3-col m1 w3-center">12</div>
-</div>
-
-<div class="w3-row">
-  <div class="w3-col w3-container m4 l3 w3-yellow">
-    <p>This part will occupy 12 columns on a small screen, 4 on a medium screen, and 3 on a large screen.</p>
+<div class="w3-panel w3-card w3-light-grey">
+  <h3>Example</h3>
+  <div class="w3-container w3-white">
+    <p>
+    <ul class="w3-ul w3-card-4" style="width:50%">
+      <li>Jill</li>
+      <li>Eve</li>
+      <li>Adam</li>
+    </ul>
+    </p>
   </div>
-  <div class="w3-col w3-container m8 l9">  
-    <p>This part will occupy 12 columns on a small screen, 8 on a medium screen, and 9 on a large screen.</p>
-    <p>This part will occupy 12 columns on a small screen, 8 on a medium screen, and 9 on a large screen.</p>
-  </div>
+  <p>A list displayed as a card.</p>
 </div>
 
 </body>
-</html>       
-
+</html>
