--- a/CSS/W3css.html
+++ b/CSS/W3css.html
@@ -6,75 +6,17 @@
 <body>
 
 <div class="w3-container">
-  <h2>Filter Table</h2>
-  <p>Search for a name in the input field.</p>
+  <p>Almost flat design is an alternative to the original flat design.</p>
+  <p>Almost flat acquires more depth, brighter colors, complex shadows, and dimension.</p>
 
-  <input class="w3-input w3-border w3-padding" type="text" placeholder="Search for names.." id="myInput" onkeyup="myFunction()">
+  <a class="w3-btn w3-red w3-hover-white">Try It Yourself</a>
 
-  <table class="w3-table-all w3-margin-top" id="myTable">
-    <tr>
-      <th style="width:60%;">Name</th>
-      <th style="width:40%;">Country</th>
-    </tr>
-    <tr>
-      <td>Alfreds Futterkiste</td>
-      <td>Germany</td>
-    </tr>
-    <tr>
-      <td>Berglunds snabbkop</td>
-      <td>Sweden</td>
-    </tr>
-    <tr>
-      <td>Island Trading</td>
-      <td>UK</td>
-    </tr>
-    <tr>
-      <td>Koniglich Essen</td>
-      <td>Germany</td>
-    </tr>
-    <tr>
-      <td>Laughing Bacchus Winecellars</td>
-      <td>Canada</td>
-    </tr>
-    <tr>
-      <td>Magazzini Alimentari Riuniti</td>
-      <td>Italy</td>
-    </tr>
-    <tr>
-      <td>North/South</td>
-      <td>UK</td>
-    </tr>
-    <tr>
-      <td>Paris specialites</td>
-      <td>France</td>
-    </tr>
-  </table>
-
-  <p><strong>Tip:</strong> Remove toUpperCase() if you want to perform a case-sensitive search.</p>
-  <p>Change tr[i].getElementsByTagName('td')[0] to [1] if you want to search for "Country" (index 1) instead of "Name" (index 0).</p>
+  <div class="w3-bar w3-section w3-black w3-card-4">
+    <a class="w3-bar-item w3-button w3-green w3-hover-red w3-padding-16">Home</a>
+    <a class="w3-bar-item w3-button w3-hover-red w3-padding-16">Link 1</a>
+    <a class="w3-bar-item w3-button w3-hover-red w3-padding-16">Link 2</a>
+  </div>
 </div>
 
-<script>
-function myFunction() {
-  var input, filter, table, tr, td, i;
-  input = document.getElementById("myInput");
-  filter = input.value.toUpperCase();
-  table = document.getElementById("myTable");
-  tr = table.getElementsByTagName("tr");
-  for (i = 0; i < tr.length; i++) {
-    td = tr[i].getElementsByTagName("td")[0];
-    if (td) {
-      txtValue = td.textContent || td.innerText;
-      if (txtValue.toUpperCase().indexOf(filter) > -1) {
-        tr[i].style.display = "";
-      } else {
-        tr[i].style.display = "none";
-      }
-    }
-  }
-}
-</script>
-
 </body>
-</html>
-
+</html> 
