--- a/baithuchanh2908.html
+++ b/baithuchanh2908.html
@@ -4,23 +4,29 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script>
 $(document).ready(function(){
- $("button").click(function(){
-    $("#div1").fadeIn();
-    $("#div2").fadeIn("slow");
-    $("#div3").fadeIn(3000);
+    $("#flip").click(function(){
+    $("#panel").slideDown("slow");
   });
 });
 </script>
+<style> 
+#panel, #flip {
+  padding: 5px;
+  text-align: center;
+  background-color: #aa3382;
+  border: solid 1px #dc0e0e;
+}
+
+#panel {
+  padding: 50px;
+  display: none;
+}
+</style>
 </head>
 <body>
-
-<p>Chu Thế Toàn </p>
-
-<button>nhấn đây để hiện</button><br><br>
-
-<div id="div1" style="width:80px;height:80px;display:none;background-color:red;"></div><br>
-<div id="div2" style="width:80px;height:80px;display:none;background-color:green;"></div><br>
-<div id="div3" style="width:80px;height:80px;display:none;background-color:rgb(47, 47, 144);"></div>
+ 
+<div id="flip">Nhấn vào đây để biết tôi tên j</div>
+<div id="panel">Chu Thế Toàn</div>
 
 </body>
 </html>
