--- a/baithuchanh2908.html
+++ b/baithuchanh2908.html
@@ -5,20 +5,28 @@
 <script>
   $(document).ready(function(){
     $("#btn1").click(function(){
-      alert("Text: " + $("#test").text());
+      $("#test1").text("CHu Thế Toàn");
     });
     $("#btn2").click(function(){
-      alert("HTML: " + $("#test").html());
+      $("#test2").html("<b>CHu Thế Toàn</b>");
+    });
+    $("#btn3").click(function(){
+      $("#test3").val("CHu Thế Toàn");
     });
   });
   </script>
   </head>
   <body>
   
-  <p id="test">Chu Thế Toàn <b>bold</b> Vẫn là CHu Thế Toàn</p>
+  <p id="test1">Hiện dạng văn bản</p>
+  <p id="test2">HIện dạng html</p>
+  
+  <p>Input field: <input type="text" id="test3" value="Mickey Mouse"></p>
   
   <button id="btn1"> Text</button>
   <button id="btn2"> HTML</button>
+  <button id="btn3"> Value</button>
+  
   
     
 </body>
