--- a/baithuchanh2908.html
+++ b/baithuchanh2908.html
@@ -1,33 +1,18 @@
 <!DOCTYPE html>
-<html>
-<head>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-<script>
-  $(document).ready(function(){
-    $("#btn1").click(function(){
-      $("#test1").text("CHu Thế Toàn");
-    });
-    $("#btn2").click(function(){
-      $("#test2").html("<b>CHu Thế Toàn</b>");
-    });
-    $("#btn3").click(function(){
-      $("#test3").val("CHu Thế Toàn");
-    });
-  });
-  </script>
-  </head>
-  <body>
-  
-  <p id="test1">Hiện dạng văn bản</p>
-  <p id="test2">HIện dạng html</p>
-  
-  <p>Input field: <input type="text" id="test3" value="Mickey Mouse"></p>
-  
-  <button id="btn1"> Text</button>
-  <button id="btn2"> HTML</button>
-  <button id="btn3"> Value</button>
-  
-  
+<html lang="en" dir="ltr">
+    <head>
+        <meta charset="utf-8">
+        <litle>Chu Thế Toàn</litle>
+    </head>
+    <?php
+echo" My first PHP file";
+echo"<h3> Hello world</h3>";
+echo"<br>";
+echo"<select>";
+echo"<option>1</option>";
+echo"<option>2</option>";
+echo"</select>";
+?>
     
 </body>
 </html>
