--- a/baithuchanh2908.html
+++ b/baithuchanh2908.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-    <head>
-        <meta charset="utf-8">
-        <litle>Chu Thế Toàn</litle>
-    </head>
-    <?php
-echo" My first PHP file";
-echo"<h3> Hello world</h3>";
-echo"<br>";
-echo"<select>";
-echo"<option>1</option>";
-echo"<option>2</option>";
-echo"</select>";
-?>
-    
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>slide 19</title>
+</head>
+<body>
+    <?php 
+    echo"HELLO MY FRIEND ,YOU'R THE BEST!!";
+    ?>
+    <h3> Hello world </h3>
+    <select>
+        <option value="1">1</option>
+        <option value="2">2</option>
+    </select>
 </body>
 </html>
