--- a/baithuchanh2908.html
+++ b/baithuchanh2908.html
@@ -1,33 +1,45 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-<script>
-  $(document).ready(function(){
-    $("#btn1").click(function(){
-      $("#test1").text("CHu Thế Toàn");
-    });
-    $("#btn2").click(function(){
-      $("#test2").html("<b>CHu Thế Toàn</b>");
-    });
-    $("#btn3").click(function(){
-      $("#test3").val("CHu Thế Toàn");
-    });
-  });
-  </script>
-  </head>
-  <body>
-  
-  <p id="test1">Hiện dạng văn bản</p>
-  <p id="test2">HIện dạng html</p>
-  
-  <p>Input field: <input type="text" id="test3" value="Mickey Mouse"></p>
-  
-  <button id="btn1"> Text</button>
-  <button id="btn2"> HTML</button>
-  <button id="btn3"> Value</button>
-  
-  
-    
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>login</title>
+    <style>
+        .login {
+            margin: 0 auto;
+            border: 1px solid black;
+            width: max-content;
+            height: max-content;
+            margin-top: 20%;
+            border-radius: 2em;
+            background-color: antiquewhite;
+        }
+
+        .login input[type="text"] {
+            margin-top: 2em;
+        }
+
+        .login input[type="submit"] {
+            margin-left: 38%;
+            margin-bottom: 2em;
+        }
+    </style>
+</head>
+
+<body>
+    <form action="../PHP/index.php" method="get">
+        <div class="login">
+            <label for="username"> Tên đăng nhập:</label>
+            <input type="text" name="username"><br>
+            <label for="password">Mật Khẩu</label>
+            <input type="password" name="password"><br>
+            <br><br>
+            <input type="submit" value="Đăng Nhập">
+            <br>
+        </div>
+
+    </form>
 </body>
+
 </html>
