--- a/baithuchanh2908.html
+++ b/baithuchanh2908.html
@@ -1,63 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<<<<<<< HEAD
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>login</title>
-    <style>
-        .login {
-            margin: 0 auto;
-            border: 1px solid black;
-            width: max-content;
-            height: max-content;
-            margin-top: 20%;
-            border-radius: 2em;
-            background-color: antiquewhite;
-        }
-
-        .login input[type="text"] {
-            margin-top: 2em;
-        }
-
-        .login input[type="submit"] {
-            margin-left: 38%;
-            margin-bottom: 2em;
-        }
-    </style>
+    <title>04</title>
 </head>
-
 <body>
-    <form action="../PHP/index.php" method="get">
-        <div class="login">
-            <label for="username"> Tên đăng nhập:</label>
-            <input type="text" name="username"><br>
-            <label for="password">Mật Khẩu</label>
-            <input type="password" name="password"><br>
-            <br><br>
-            <input type="submit" value="Đăng Nhập">
-            <br>
+    <form action="index.php" method="GET">
+        <div>
+            <label for="dv01">Nhập vào kích thước thứ nhất:</label><br>
+            <input type="text" name="dv01"><br>
+            <label for="dv02">Nhập vào kích thước thứ hai:</label><br>
+            <input type="text" name="dv02"><br>
+            <input  type="submit" value="Kết quả"/>
+
+
+
+
         </div>
-
     </form>
-</body>
+    <?php
+    if(isset($_GET['dv01']) && isset($_GET['dv02']))
+    { 
+    $dv01 =(float) $_GET["dv01"];
+    $dv02 =(float) $_GET["dv02"];
+    if ($dv01 ==$dv02) {
+        echo"đây là hình vuông";
+    }
+    else
+    echo"dây là hình chữ nhật";
+}
 
-=======
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>slide 19</title>
-</head>
-<body>
-    <?php 
-    echo"HELLO MY FRIEND ,YOU'R THE BEST!!";
+
     ?>
-    <h3> Hello world </h3>
-    <select>
-        <option value="1">1</option>
-        <option value="2">2</option>
-    </select>
 </body>
->>>>>>> 997b796e5d37f736d9e5c1641ae17025700056d5
 </html>
